# Cadence

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  README.md  START CADENCE (with console).bat  pyproject.toml
docs/plans/: 2026-02-28-ui-redesign-design.md  2026-02-28-ui-redesign.md  2026-02-28-vad-chunking-design.md  2026-02-28-vad-chunking.md  2026-03-02-transcription-quality-v1.md  2026-03-04-bleed-compensated-silence-detection.md  2026-03-05-echo-cancellation-v3-design.md  2026-03-05-echo-cancellation-v3-implementation.md
scripts/: build.bat  build_exe.spec
src/: main.py
src/core/: audio_recorder.py  echo_cancellation.py  echo_diagnostics.py  echo_gate.py  session_manager.py  silence_detector.py  sound_effects.py  streaming_transcriber.py  transcriber.py  updater.py
src/gui/: main_window.py  settings_dialog.py  system_tray.py  theme.py  toast_notification.py  update_toast.py
src/utils/: config.py  logger.py  resource_path.py
tests/: benchmark_comparison.py  test_audio_recorder.py  test_bleed_compensation.py  test_config.py  test_dedup_real_data.py  test_echo_cancellation.py  test_echo_diagnostics.py  test_echo_gate.py  test_echo_gate_comprehensive.py  test_merge_and_filter.py  test_postprocess.py  test_postprocess_worker.py  test_session_manager.py  test_settings_features.py  test_silence_detector.py  test_sound_effects.py  test_streaming_transcriber.py  test_transcriber.py  test_transcription_worker.py  test_updater.py
