[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence"
version = "2.2.0"
description = "Meeting transcription desktop app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "William Horne"}
]
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.13.0",
    "pytest>=7.0.0",
]

[project.scripts]
cadence = "src.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
managed = true
